deployments/trips_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryycc0983.azurecr.io/team-2/trips:1.5
        ports:
        - containerPort: 80
          protocol: TCP
