deployments/tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: tripviewer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryycc0983.azurecr.io/team-2/tripviewer:1.5
        ports:
        - containerPort: 80
          protocol: TCP
