deployments/user-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: user-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryycc0983.azurecr.io/team-2/user-java:1.5
        ports:
        - containerPort: 80
          protocol: TCP
