deployments/user-profile_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryycc0983.azurecr.io/team-2/user-profile:1.5
        ports:
        - containerPort: 80
          protocol: TCP
